[Mac] Flip permission bubble in RTL

Bug: 748615
Change-Id: I2fddf4293737f1669913fa7e097f8299918327b4
Reviewed-on: https://chromium-review.googlesource.com/586644
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489708}